--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/astroquest
+MONGODB_URI=mongodb://127.0.0.1:27017/astroquestt
 PORT=5000
+JSON_WEB=astroquestt_secret_key
