--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/astroquestt
 PORT=5000
-JSON_WEB=astroquestt_secret_key
+JWT_SECRET=astroquestt_admin_secret_123
+JSON_WEB=astroquestt_secret_123
+MONGO_URI=mongodb://127.0.0.1:27017/astroquestt
