--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
 JWT_SECRET=astroquestt_admin_secret_123
 JSON_WEB=astroquestt_secret_123
-MONGO_URI=mongodb://127.0.0.1:27017/astroquestt
+MONGO_URI=mongodb+srv://prameesha4116_db_user:Prameesha4116@cluster0.dzagtrt.mongodb.net/?appName=Cluster0
